@@ -1,3 +1,4 @@
+* Keep CSV export window opened
 * Remove favorite management
 * Retry JSON-RPC requests on Service Unavailable
 * Set focus on search entry after search
